--- a/src/styles/normalize.css
+++ b/src/styles/normalize.css
@@ -1,7 +1,7 @@
 @charset "UTF-8";
 @media screen {
     :root {
-        font-size: 16px;
+        font-size: 20px;
     }
 
     * {
@@ -32,5 +32,11 @@
 
     textarea {
         resize: vertical;
+    }
+}
+
+@media screen and (min-width: 600px) {
+    :root {
+        font-size: 16px;
     }
 }
